--- a/css/menu_projets.css
+++ b/css/menu_projets.css
@@ -81,3 +81,13 @@ figure{
     font-size: 1.5em;
     text-align: center;
 }
+
+@media screen and (max-width: 768px){
+    h1{
+        font-size: 4.5em;
+    }
+    h2{
+        font-size: 2.5em;
+        margin: 50px 10px;
+    }
+}
