--- a/css/projets.css
+++ b/css/projets.css
@@ -35,7 +35,9 @@ header a {
     color: #ec2929;
     padding: 20px;
 }
-
+main{
+    min-height: 100vh;
+}
 h1{
     font-size: 8em;
     color: #ec2929;
@@ -48,10 +50,31 @@ img, video, iframe {
     display: block;
     margin: auto; 
     box-shadow:10px 10px 20px rgba(0, 0, 0, 0.3) ;
+    grid-column: 1/3;
 }
-
+.popup {
+    position: absolute;
+    z-index: 10;
+    top:75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:100%; 
+    background-color: rgba(255, 255, 255, 0.9);
+    display: none;
+}
+.popup img {
+    width: 50%;
+}
+.popup.active {
+    display: block;
+}
 #projet-content img[alt="Affiche d'information"]{
     max-width: 50%;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+#projet-content img[alt="Affiche d'information"]:hover{
+    transform: scale(1.1);
 }
 video{
     width: 70%;
@@ -61,11 +84,10 @@ iframe{
 }
 #projet-content p {
     font-size: 1.3em;
-    margin:50px auto;
-    width: 80%;
+    grid-column: 3/5;
 }
 
-#projet-content a{
+main a{
     color: #ec2929;
     font-size: 1.5em;
     font-weight: bold;
@@ -73,14 +95,26 @@ iframe{
     border: #ec2929 solid 3px;
     padding: 20px;
     border-radius: 50px;
-    margin: 170px;
     transition: all 0.5s;
-
+    margin-left: 80px;
 }
 
-#projet-content a:hover{
+main a:hover{
     background-color: #ec2929;
     color: white;
+}
+
+.p-frame{
+    width: 80%;
+    margin: auto;
+    padding-top:50px ;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+    margin-bottom: 100px;
 }
 
 footer{
@@ -108,9 +142,5 @@ footer{
     }
     iframe{
         max-height: 400px;
-    }
-
-    #projet-content img[alt="Affiche d'information"]{
-        width: 100% !important;
     }
 }
